--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "stylus": "^0.60.0",
     "svelte-check": "^3.5.2",
     "svelte-preprocess": "^5.0.4",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
     "@typhonjs-fvtt/runtime": "^0.1.2",
