--- a/package.json
+++ b/package.json
@@ -15,29 +15,30 @@
     "linkFoundry": "node tools/foundryLink.js"
   },
   "devDependencies": {
-    "@svelte-plugins/tooltips": "^0.1.8",
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@eslint/js": "^9.11.1",
+    "@svelte-plugins/tooltips": "^3.0.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
-    "esbuild": "^0.19.3",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-svelte": "^2.33.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "prettier-plugin-svelte": "^3.0.3",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "stylus": "^0.60.0",
-    "svelte-check": "^3.5.2",
-    "svelte-preprocess": "^5.0.4",
-    "vite": "^4.4.9",
-    "vite-plugin-glsl": "^1.1.2"
+    "esbuild": "^0.24.0",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-svelte": "^2.44.1",
+    "globals": "^15.10.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.7",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "stylus": "^0.63.0",
+    "svelte-check": "^4.0.4",
+    "svelte-preprocess": "^6.0.3",
+    "vite": "^5.4.8",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
-    "@typhonjs-fvtt/runtime": "^0.1.2",
+    "@typhonjs-fvtt/runtime": "^0.1.3",
     "@typhonjs-fvtt/svelte-standard": "^0.1.0",
-    "svelte": "^4.2.1"
+    "svelte": "^4.2.19"
   },
   "browserslist": [
     ">5%",
