--- a/package.json
+++ b/package.json
@@ -15,30 +15,34 @@
     "linkFoundry": "node tools/foundryLink.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
+    "@eslint/js": "^9.12.0",
+    "@league-of-foundry-developers/foundry-vtt-types": "https://github.com/League-of-Foundry-Developers/foundry-vtt-types#v12.331.0-beta",
     "@svelte-plugins/tooltips": "^3.0.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/parser": "^8.8.1",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
+    "@typhonjs-fvtt/runtime": "^0.1.3",
+    "@typhonjs-fvtt/svelte-standard": "^0.1.0",
     "esbuild": "^0.24.0",
-    "eslint": "^9.11.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-svelte": "^2.44.1",
     "globals": "^15.10.0",
     "lint-staged": "^15.2.10",
+    "pixi.js": "7.4.2",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "stylus": "^0.63.0",
+    "svelte": "^4.2.19",
     "svelte-check": "^4.0.4",
-    "svelte-preprocess": "^6.0.3",
+    "svelte-eslint-parser": "^0.41.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1",
     "vite": "^5.4.8",
     "vite-plugin-glsl": "^1.3.0"
-  },
-  "dependencies": {
-    "@typhonjs-fvtt/runtime": "^0.1.3",
-    "@typhonjs-fvtt/svelte-standard": "^0.1.0",
-    "svelte": "^4.2.19"
   },
   "browserslist": [
     ">5%",
@@ -49,5 +53,8 @@
   "lint-staged": {
     "*.js": "eslint --fix",
     "*.svelte": "eslint --fix"
+  },
+  "dependencies": {
+    "nanoid": "^5.0.7"
   }
 }
