--- a/package.json
+++ b/package.json
@@ -16,32 +16,30 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
-    "@league-of-foundry-developers/foundry-vtt-types": "https://github.com/League-of-Foundry-Developers/foundry-vtt-types#v12.331.0-beta",
+    "@league-of-foundry-developers/foundry-vtt-types": "https://github.com/League-of-Foundry-Developers/foundry-vtt-types.git#v12/main",
     "@svelte-plugins/tooltips": "^3.0.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@types/eslint__js": "^8.42.3",
-    "@typescript-eslint/parser": "^8.8.1",
-    "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
+    "@typescript-eslint/parser": "^8.9.0",
     "@typhonjs-fvtt/runtime": "^0.1.3",
     "@typhonjs-fvtt/svelte-standard": "^0.1.0",
     "esbuild": "^0.24.0",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-svelte": "^2.44.1",
-    "globals": "^15.10.0",
+    "eslint-plugin-svelte": "^2.45.1",
+    "globals": "^15.11.0",
     "lint-staged": "^15.2.10",
-    "pixi.js": "7.4.2",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "stylus": "^0.63.0",
     "svelte": "^4.2.19",
-    "svelte-check": "^4.0.4",
-    "svelte-eslint-parser": "^0.41.1",
+    "svelte-check": "^4.0.5",
+    "svelte-eslint-parser": "^0.42.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1",
-    "vite": "^5.4.8",
+    "typescript-eslint": "^8.9.0",
+    "vite": "^5.4.9",
     "vite-plugin-glsl": "^1.3.0"
   },
   "browserslist": [
